feat: implement project management module services, controllers, and frontend components